--- a/app/src/main/res/drawable/flash_background.xml
+++ b/app/src/main/res/drawable/flash_background.xml
@@ -2,6 +2,6 @@
 <shape
     android:shape="oval"
     xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/white" />
-    <corners android:radius="45dp" />
+    <solid android:color="@android:color/transparent"/>
+    <stroke android:width="20dp" android:color="@color/white"/>
 </shape>
