--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,6 +19,13 @@
         android:layout_height="match_parent"
         android:layout_above="@id/linearLayout" />
 
+    <com.example.visionapp.OverlayView
+        android:id="@+id/overlay"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:layout_above="@id/linearLayout"/>
+
+
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
