--- a/app/src/main/res/drawable/ic_help.xml
+++ b/app/src/main/res/drawable/ic_help.xml
@@ -1,10 +1,14 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="60dp"
-    android:height="60dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24"
-    android:tint="?attr/colorControlNormal">
+    android:width="85dp"
+    android:height="85dp"
+    android:viewportWidth="85"
+    android:viewportHeight="85">
   <path
-      android:fillColor="@android:color/white"
-      android:pathData="M12,2C6.48,2 2,6.48 2,12s4.48,10 10,10 10,-4.48 10,-10S17.52,2 12,2zM13,19h-2v-2h2v2zM15.07,11.25l-0.9,0.92C13.45,12.9 13,13.5 13,15h-2v-0.5c0,-1.1 0.45,-2.1 1.17,-2.83l1.24,-1.26c0.37,-0.36 0.59,-0.86 0.59,-1.41 0,-1.1 -0.9,-2 -2,-2s-2,0.9 -2,2L8,9c0,-2.21 1.79,-4 4,-4s4,1.79 4,4c0,0.88 -0.36,1.68 -0.93,2.25z"/>
+      android:fillColor="#FF000000"
+      android:pathData="M85,85l-85,-0l-0,-85l85,-0z"
+      android:strokeAlpha="0"
+      android:fillAlpha="0"/>
+  <path
+      android:fillColor="#FF000000"
+      android:pathData="M42.335,11.306A31.029,31.029 0,1 0,73.364 42.335,31.029 31.029,0 0,0 42.335,11.306ZM42.335,60.952a3.1,3.1 0,1 1,3.1 -3.1A3.1,3.1 0,0 1,42.335 60.952ZM45.435,44.941v3.6a3.1,3.1 0,1 1,-6.206 0L39.229,42.335a3.1,3.1 0,0 1,3.1 -3.1,4.654 4.654,0 1,0 -4.654,-4.654 3.1,3.1 0,1 1,-6.206 0A10.86,10.86 0,1 1,45.438 44.941Z"/>
 </vector>
