--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,7 +43,6 @@
             android:layout_height="80dp"
             android:gravity="center"
             android:layout_weight="1"
-            android:background="@drawable/shape"
             android:src="@drawable/ic_help"
             android:backgroundTint="@color/black"
             app:tint="@color/white"/>
@@ -54,9 +53,7 @@
             android:layout_height="80dp"
             android:gravity="center"
             android:layout_weight="1"
-            android:background="@drawable/shape"
-            android:src="@drawable/ic_flashlight"
-            app:tint="@color/black"/>
+            android:background="@drawable/ic_flash_off"/>
 
         <RelativeLayout
             android:layout_width="wrap_content"
