--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,8 +37,9 @@
             android:gravity="center"
             android:layout_weight="1"
             android:src="@drawable/ic_help"
+            android:contentDescription="tombol bantuan"
             android:backgroundTint="@color/black"
-            app:tint="@color/white"/>
+            app:tint="@color/white" />
 
         <ImageButton
             android:id="@+id/imgBtnFlash"
@@ -46,7 +47,8 @@
             android:layout_height="80dp"
             android:gravity="center"
             android:layout_weight="1"
-            android:background="@drawable/ic_flash_off"/>
+            android:background="@drawable/ic_flash_off"
+            android:contentDescription="tombol flash" />
 
         <RelativeLayout
             android:layout_width="wrap_content"
@@ -63,7 +65,8 @@
                 android:scaleX="1.5"
                 android:scaleY="1.5"
                 android:thumb="@drawable/thumb_selector"
-                android:track="@drawable/track_selector" />
+                android:track="@drawable/track_selector"
+                android:contentDescription="tombol ganti mode" />
         </RelativeLayout>
 
     </LinearLayout>
