--- a/app/src/main/res/layout/deny_camera_dialog.xml
+++ b/app/src/main/res/layout/deny_camera_dialog.xml
@@ -15,7 +15,7 @@
         android:layout_height="wrap_content"/>
     <TextView
         android:id="@+id/tvAccessDeny"
-        android:text="Akses kamera ditolak. Silakan beri akses kamera untuk mulai menggunakan."
+        android:text="Akses kamera ditolak. Silakan beri akses kamera untuk mulai menggunakan. Izin > Kamera -> Izinkan ballalaal"
         android:gravity="center"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
