--- a/app/src/main/res/drawable/ic_help.xml
+++ b/app/src/main/res/drawable/ic_help.xml
@@ -4,11 +4,11 @@
     android:viewportWidth="85"
     android:viewportHeight="85">
   <path
-      android:fillColor="#FF000000"
+      android:fillColor="@color/white"
       android:pathData="M85,85l-85,-0l-0,-85l85,-0z"
       android:strokeAlpha="0"
       android:fillAlpha="0"/>
   <path
-      android:fillColor="#FF000000"
+      android:fillColor="@color/blue"
       android:pathData="M42.335,11.306A31.029,31.029 0,1 0,73.364 42.335,31.029 31.029,0 0,0 42.335,11.306ZM42.335,60.952a3.1,3.1 0,1 1,3.1 -3.1A3.1,3.1 0,0 1,42.335 60.952ZM45.435,44.941v3.6a3.1,3.1 0,1 1,-6.206 0L39.229,42.335a3.1,3.1 0,0 1,3.1 -3.1,4.654 4.654,0 1,0 -4.654,-4.654 3.1,3.1 0,1 1,-6.206 0A10.86,10.86 0,1 1,45.438 44.941Z"/>
 </vector>
