--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -3,4 +3,7 @@
     <dimen name="switch_padding">-1dp</dimen>
     <dimen name="switch_radius">24dp</dimen>
     <dimen name="switch_size">24dp</dimen>
+    <dimen name="font_size_small">12sp</dimen>
+    <dimen name="font_size_medium">14sp</dimen>
+    <dimen name="font_size_large">16sp</dimen>
 </resources>
