--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -11,7 +11,8 @@
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
-        <!-- Customize your theme here. -->
+        <!-- Default font -->
+        <item name="android:fontFamily">@font/aphont_regular</item>
     </style>
 
     <!-- Base application theme. -->
@@ -26,16 +27,21 @@
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
-        <!-- Customize your theme here. -->
+        <!-- Default font -->
+        <item name="android:fontFamily">@font/aphont_regular</item>
     </style>
 
     <!--  Bottom sheet dialog theme  -->
     <style name="BottomSheetDialogTheme" parent="Theme.Design.Light.BottomSheetDialog">
         <item name="bottomSheetStyle">@style/BottomSheetStyle</item>
+        <!-- Default font -->
+        <item name="android:fontFamily">@font/aphont_regular</item>
     </style>
 
     <style name="BottomSheetStyle" parent="Widget.Design.BottomSheet.Modal">
         <item name="android:background">@android:color/transparent</item>
+        <!-- Default font -->
+        <item name="android:fontFamily">@font/aphont_regular</item>
     </style>
         
 </resources>
