update help script

--- a/app/src/main/res/layout/bottom_sheet_dialog.xml
+++ b/app/src/main/res/layout/bottom_sheet_dialog.xml
@@ -43,7 +43,7 @@
     </LinearLayout>
     <TextView
         android:id="@+id/tvHelpDesc"
-        android:text="Arahkan handphone ke arah barang yang ingin Anda deteksi. Pembacaan hasil deteksi akan dilakukan setiap 5 detik. Barang akan dideteksi secara terurut dari bagian kiri atas ke kanan bawah. \n\nTekan tombol di kiri bawah untuk bantuan. Tekan tombol di kanan bawah untuk mengubah mode. Tekan tombol di tengah untuk mematikan lampu flash."
+        android:text="Arahkan handphone ke arah barang yang ingin Anda deteksi. Barang akan dideteksi secara terurut dari bagian kiri atas ke kanan bawah.\n\nTekan tombol di kiri bawah untuk bantuan. Tekan tombol di tengah bawah untuk mematikan lampu flash. Tekan tombol di kanan bawah untuk mengubah mode. Mode online hanya dapat dilakukan jika perangkat tersambung ke internet."
         android:gravity="left"
         android:textColor="@color/black"
         android:fontFamily="@font/aphont_regular"
