--- a/app/src/main/res/drawable/shape_blue_border.xml
+++ b/app/src/main/res/drawable/shape_blue_border.xml
@@ -2,7 +2,7 @@
 <shape
     android:shape="rectangle"
     xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/white" />
+    <solid android:color="@android:color/transparent" />
     <corners android:radius="5dp" />
     <stroke android:width="1dp" android:color="@color/blue" />
 </shape>
