--- a/app/src/main/res/layout/tnc_dialog.xml
+++ b/app/src/main/res/layout/tnc_dialog.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/darkGrey"
     android:orientation="vertical"
     android:gravity="center"
     android:paddingLeft="20dp"
@@ -23,7 +24,7 @@
         android:textStyle="bold"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:fontFamily="@font/aphont_bold"
         android:textSize="@dimen/font_size_large"
         android:layout_width="wrap_content"
@@ -42,7 +43,7 @@
         android:gravity="center"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="@dimen/font_size_medium"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
