--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="blue">#FF235fa4</color>
-    <color name="black">#FF000000</color>
+    <color name="blue">#FF205897</color>
+    <color name="black">#FF121212</color>
     <color name="grey">#FF9A9A9A</color>
+    <color name="darkGrey">#FF282828</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="yellow">#FFFFFF00</color>
+    <color name="yellow">#FFFCEA7A</color>
 
-    <color name="deviderView">#FF707070</color>
+    <color name="deviderView">#FFE6E6E6</color>
 </resources>
