--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -48,7 +48,7 @@
             android:gravity="center"
             android:layout_weight="1"
             android:background="@drawable/ic_flash_off"
-            android:contentDescription="flash" />
+            android:contentDescription="flash off" />
 
         <RelativeLayout
             android:layout_width="wrap_content"
@@ -61,7 +61,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
-                android:contentDescription="ubah mode"
+                android:contentDescription="mode offline"
                 android:padding="10dp"
                 android:scaleX="1.5"
                 android:scaleY="1.5"
