--- a/app/src/main/res/layout/bottom_sheet_dialog.xml
+++ b/app/src/main/res/layout/bottom_sheet_dialog.xml
@@ -43,7 +43,7 @@
     </LinearLayout>
     <TextView
         android:id="@+id/tvHelpDesc"
-        android:text="Arahkan handphone ke arah barang yang ingin Anda deteksi. Barang akan dideteksi secara terurut dari bagian kiri atas ke kanan bawah.\n\nTekan tombol di kiri bawah untuk bantuan. Tekan tombol di tengah bawah untuk mematikan lampu flash. Tekan tombol di kanan bawah untuk mengubah mode. Mode online hanya dapat dilakukan jika perangkat tersambung ke internet."
+        android:text="@string/help_desc"
         android:gravity="left"
         android:textColor="@color/white"
         android:fontFamily="@font/aphont_regular"
