--- a/app/src/main/res/layout/deny_camera_dialog.xml
+++ b/app/src/main/res/layout/deny_camera_dialog.xml
@@ -19,7 +19,7 @@
         android:layout_height="wrap_content"/>
     <TextView
         android:id="@+id/tvAccessDeny"
-        android:text="Akses kamera ditolak. Silakan beri akses kamera dengan membuka menu Izin, pilih Kamera, dan pilih Izinkan hanya saat aplikasi digunakan."
+        android:text="@string/deny_camera"
         android:gravity="center"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
