--- a/app/src/main/res/drawable/ic_white_circle.xml
+++ b/app/src/main/res/drawable/ic_white_circle.xml
@@ -1,5 +1,9 @@
-<vector android:height="24dp" android:tint="@color/white"
-    android:viewportHeight="24" android:viewportWidth="24"
-    android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
+<vector
+    android:height="24dp"
+    android:width="24dp"
+    android:tint="@color/white"
+    android:viewportHeight="24"
+    android:viewportWidth="24"
+    xmlns:android="http://schemas.android.com/apk/res/android">
     <path android:fillColor="@android:color/white" android:pathData="M12,12m-10,0a10,10 0,1 1,20 0a10,10 0,1 1,-20 0"/>
 </vector>
